WIP: use compiler plugin